pfgh_read().  The entire library should be recompiled.

20181222
  makefile.u, makefile.vc in solvers2.tgz: update dependency rules.
No change to asldate.c.

20190225
  eval2.c in solvers2.tgz:  fix a bug in evaluating piecewise-linear
terms when the .nl file is generated with "option pl_linearize 0;".
This only matters with reader pfgh_read().

20190314
  obj_adj.c:  fix bugs when several objectives can be adjusted.

20190315
  pfghread.c in solvers2.tgz: fix a bug that occasionally affected
sparsity computations.

20190522
  indic_cons.c in solvers2.tgz: fix a bug that caused a diagnosis of
"not an indicator constraint" when irrelevant defined variables were
nonlinear.

20190605
  New file arith.h1.  On many systems, it may suffice to use arith.h1
as arith.h (by copying or linking arith.h1 to arith.h).
  mach.c, stderr.c:  add simple tests of whether the ASL was compiled
with the right arith.h, assuming IEEE arithmetic.  The tests can pass
with the wrong arith.h without preventing faults if, e.g., Double_Align
needed to be #defined in arith.h.  It is best to "make clean; make"
in the solvers directory after changing compiler options or compilers
for compiling the ASL.  People using cross-compilers must take suitable
care to get arith.h right, ideally using an arith.h derived on the
target system, with the target compiler options and compiler, though
using arith.h1 as arith.h may often work.

20190611
  Correct a comment about AMPLFUNC_STROUT in funcadd.h; asldate.c not
changed.

20190702
  arith.h1: add conditional specification of "Long".  No change to
asldate.c.

20190815
  indic_cons.c in solvers2.tgz: fix a bug (e.g., fault) in detecting
some invalid indicator constraints.

20191219
  solvers2.tgz:  fix a bug in degree.c; degree.c eval1.c eval2.c
fg_read.c fg_write.c indic_cons.c mqpcheckv.c nqpcheck.c opno.hd
opno2.h pfghread.c pshvprod.c sphes.c:  new cases in opno.hd and
opno2.h in part for forthcoming new source file nl1vcount.c.